--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <header>
 <h1>  Reiclagem</h1>
+<p> A reciclagem é um processo que reaproveita materiais descartados para reintroduzi-los no ciclo produtivo ou criar novos produtos. É um método de gestão de resíduos que reduz o consumo de recursos naturais, poupa energia, diminui o volume de lixo e cria empregos</p>
     </header>
     
 </body>
